# aquatonomous-sim

./: README.md
.devcontainer/: devcontainer.json
ci/: colcon_ci.yaml
docs/: setup-jetson.md  setup-wsl.md  troubleshooting.md  workflows.md
install/: local_setup.sh  setup.sh
log/: latest_build
scripts/: Thrust_Control.py  bootstrap_wsl.sh  build.sh  run_jetson_sim.sh  run_local_sim.sh  run_remote_client.sh
sim_ws/install/: local_setup.sh  setup.sh
sim_ws/install/boat_sim/share/boat_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
sim_ws/install/boat_sim/share/boat_sim/config/: bridge.yaml
sim_ws/install/boat_sim/share/boat_sim/launch/: bringup.launch.py
sim_ws/install/boat_sim/share/boat_sim/models/nd_boat/: model.sdf
sim_ws/install/boat_sim/share/boat_sim/worlds/: flat_water.sdf
sim_ws/log/: latest_build  latest_list
sim_ws/src/boat_bringup/: package.xml  setup.cfg  setup.py
sim_ws/src/boat_bringup/boat_bringup/config/: bridge.yaml  rviz.rviz  test_world.sdf
sim_ws/src/boat_bringup/launch/: bringup.launch.py
sim_ws/src/boat_bringup/resource/: boat_bringup
sim_ws/src/boat_description/: CMakeLists.txt  package.xml
sim_ws/src/boat_sim/: setup.cfg  setup.py
sim_ws/src/boat_sim/launch/: bringup.launch.py
sim_ws/src/boat_sim/models/nd_boat/: model.config  model.sdf
