
<?xml version="1.0"?>
<package format="3">
  <name>boat_bringup</name>
  <version>0.0.1</version>
  <description>Bringup and launch files for aQuatonomous sim</description>
  <maintainer email="noreply@example.com">aquatonomous</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
</package>
