
<?xml version="1.0"?>
<package format="3">
  <name>boat_description</name>
  <version>0.0.1</version>
  <description>Boat URDF/SDF and meshes</description>
  <maintainer email="noreply@example.com">aquatonomous</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
